tests/invalid_types/wrong_return.hk
fun wrong() I64{
    12
}

fun main() I32{
wrong()
}

#[
<fail>
]#
